<resources>
    <string name="app_name">AppCoeur</string>
    <string name="start_test">Start Test !</string>
    <string name="your_name">Your Name</string>
    <string name="logo">logo</string>
    <string name="do_you_have_cholesterol">Do you have cholesterol ?</string>
    <string name="do_you_have_a_heart_condition">Do you have a heart condition ?</string>
    <string name="imc">Do you know you BMI ?</string>
    <string name="avc">Did a relative of you have heart issues before (s)he was 55 ?</string>
    <string name="image3">imagecoeur</string>
    <string name="do_you_have_hypertension">Do you have hypertension ?</string>
    <string name="are_you_diabetic">Are you diabetic ?</string>
    <string name="description">description</string>
    <string name="your_age">Your Age :</string>
    <string name="you_are">You are :</string>
    <string name="a_woman">A Woman</string>
    <string name="a_man">A man</string>
    <string name="other_answer">Other answer</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="have_you_ever_had_a_cardiac_check_up">Have you ever had a cardiac check-up ?</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="i_never_have">I never have</string>
    <string name="i_have">I have</string>
    <string name="have_you_ever_consulted_a_cardiologist">Have you ever consulted a cardiologist ?</string>
    <string name="have_you_already_checked_with_your_doctor_about_your_heart_risk">Have you already checked with your doctor about your heart risk ?</string>
    <string name="breakfast">Do you usually start your day by a breakfast ?</string>
    <string name="do_you_eat_fruits_and_vegetables_every_day">Do you eat fruits and vegetables every day ?</string>
    <string name="do_you_add_more_salt_to_your_plates">Do you add more salt to your plates ?</string>
    <string name="at_home_you_mostly_eat">At home, you mostly eat :</string>
    <string name="my_assessment">My assessment</string>
    <string name="my_heart">My heart</string>
    <string name="my_cardiac_monitoring">My cardiac monitoring</string>
    <string name="my_nutrition">My nutrition</string>
    <string name="age">age</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="i_dont_know">I don\'t know</string>
    <string name="prepared">pre-prepared food</string>
    <string name="cooked">self cooked meal</string>
    <string name="can">canned food</string>
</resources>